--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1>coba push dari directori ke guthub</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore qui pariatur illum adipisci repellat assumenda totam laborum veniam nihil doloremque mollitia iure suscipit, delectus similique hic, aspernatur nam quia ullam tenetur. Dolorum a ipsum facilis doloribus earum, rem nostrum amet ab maiores! Beatae natus quam aliquid voluptate quae blanditiis, nostrum illum distinctio nemo quos vel nisi quod facilis aspernatur explicabo magnam dolorum, quas consequuntur deserunt! Nulla corporis enim rerum alias, necessitatibus error illo, odit voluptatibus, vitae accusamus in deleniti. Dolorem odit ipsam nemo porro ullam, earum excepturi perspiciatis voluptate, omnis dignissimos rem aliquid nam tempora sequi ratione maxime explicabo debitis.</p>
+    <ul>
+        <li>satu</li>
+        <li>dua</li>
+    </ul>
 </body>
 </html>
